@@ -1,6 +1,7 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+ - Add handy SYNOPSIS to ::DateMethods1 (thanks for asking rjbs!)
 
 2.023000  2014-05-26 19:33:01-05:00 America/Chicago
  - Add ::Shortcut::Explain RS helper
